# flask-livereload

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
examples/: README.md  advanced_demo.py  custom_watch_patterns_example.py  local_development_guide.md  standalone_example.py  test_import.py
flask_livereload/: pyproject.toml  setup.py
flask_livereload/src/flask_livereload/: __init__.py  views.py
src/flask_livereload/: views.py
templates/: index.html
tests/: test_livereload.py
